# CmdBridge-Smart-Cross-OS-Terminal-Helper

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  SECURITY.md  build.bat  commands.c  commands.h  intent.h  main.c  os_mapper.h  parser.c  parser.h  refactor.ps1  safety.c  safety.h  test_all.txt  utils.c
.github/workflows/: ci.yml
benchmarks/: benchmark_end_to_end.c  benchmark_mapper.c  benchmark_memory.c  benchmark_native_api.c  benchmark_parser.c  benchmark_safety.c  benchmark_startup.c  benchmark_utils.h
config/: .env.example  commands.conf  explain.conf
docs/: ARCHITECTURE.md  TESTING.md
src/: aliases.c  aliases.h  commands.c  commands.h  explain.c  explain.h  history.c  history.h  intent.c  intent.h  logger.c  logger.h  main.c  os_mapper.c  os_mapper.h  parser.c  safety.c  safety.h  utils.c  utils.h
src/native_api/: file_ops.c  file_ops.h  posix_file_ops.c  windows_file_ops.c
tests/: fuzz_tests.c  integration_tests.c  security_tests.c  test_framework.c  test_framework.h  test_mapper.c  test_native_api.c  test_parser.c  test_safety.c  test_utils.c
